--- a/trabajo.tex
+++ b/trabajo.tex
@@ -92,14 +92,17 @@
   linkcolor=ColorTitulo
 }
 
+%Hexadecimal
+\usepackage{expl3}
+
 % Bibliografía
 
-\usepackage[sorting=none, style=apa, isbn=true]{biblatex}
-\DefineBibliographyStrings{spanish}{
-  urlseen = {Último acceso},
-  retrieved = {Último acceso},
-}
-\addbibresource{bibliografia.bib}
+%\usepackage[sorting=none, style=apa, isbn=true]{biblatex}
+%\DefineBibliographyStrings{spanish}{
+%  urlseen = {Último acceso},
+%  retrieved = {Último acceso},
+%}
+%\addbibresource{bibliografia.bib}
 
 %Apéndices
 \usepackage[toc,title,page]{appendix}
@@ -143,9 +146,7 @@ En el desarrollo de la criptografía, con el objetivo de poder mantener comunica
 
 En 1985 es cuando por primera vez surge la idea de utilizar esta herramienta matemática con fines criptográficos, adaptando el problema del logaritmo discreto para obtener una analogía en puntos de una curva elíptica en vez de en un cuerpo finito.\\
 
-El trabajo desarrollado comienza con una exposición, en la Sección \ref{sec:curva}, sobre las curvas elípticas. Se muestra su definición y las operaciones de suma y producto por escalares utilizadas para definir una estructura de grupo sobre las mismas. Además, se comenta cómo conseguir un subgrupo a partir de un punto de la curva, pues será necesario para las aplicaciones criptográficas. Continuamos en la Sección \ref{sec:log} formular el problema del logaritmo discreto y la dificultad para resolverlo, de ello depende la seguridad de la criptografía de la curva elíptica. Pasamos entonces, en la Sección \ref{sec:alg}, a explicar dos algoritmos utilizados en la criptografía de la curva elíptica: ECDH (para el intercambio de claves) y ECDSA (para firmar mensajes).
-% También analizamos/recogemos las curvas recomendadas en los estándares...
-¿curvas en los estándares?
+El trabajo desarrollado comienza con una exposición, en la Sección \ref{sec:curva}, sobre las curvas elípticas. Se muestra su definición y las operaciones de suma y producto por escalares utilizadas para definir una estructura de grupo sobre las mismas. Además, se comenta cómo conseguir un subgrupo a partir de un punto de la curva, pues será necesario para las aplicaciones criptográficas. Continuamos en la Sección \ref{sec:log} formular el problema del logaritmo discreto y la dificultad para resolverlo, de ello depende la seguridad de la criptografía de la curva elíptica. Pasamos entonces, en la Sección \ref{sec:alg}, a explicar dos algoritmos utilizados en la criptografía de la curva elíptica: ECDH (para el intercambio de claves) y ECDSA (para firmar mensajes).También recogemos algunas de las curvas más usadas en la actualidad en este tipo de criptografía.
 Por último, se compara los sistemas basados en curvas elípticas con los basados en RSA, que es otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios.\\
 
 Además, se ha utilizado SageMath para representar curvas elípticas y para realizar una implementación propia del algoritmo ECDSA, puesto que esta herramienta contiene funciones específicas para el tratamiento de curvas elípticas. El código se encuentra...
@@ -236,6 +237,16 @@ m = \frac{3x^{2}_P + a}{2y_P}.
 \]
 En ambos casos debemos comprobar que la suma pertenece a la curva y que los tres puntos están alineados.
 
+La imagen \ref{fig:EC_add} muestra la idea geométrica de la operación de suma
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{ec_add}
+	\caption{Suma de la curva elíptica $\mathbb{R}$ [https://sinhvientot.net/elliptic-curve-cryptography/]}
+	\label{fig:EC_add}
+\end{figure}
+
+
 \item Finalmente, dado $ n \in \mathbb{Z} $, el producto por escalares lo definimos como:
 \[   
 nP = 
@@ -247,6 +258,38 @@ nP =
 \]
 \end{enumerate}
 
+\subsection{Curvas elípticas sobre cuerpos finitos}
+Lo más habitual es que el cuerpo sobre el que estamos trabajando sea un cuerpo finito $ \mathbb{F}_p $ con $ p $ un primo.En ese caso, la curva vendría dada por:
+\[E = \{(x,y) \in K\times K : y^2 \equiv x^3 + ax +b \bmod p,\ 4a^3+27b \not\equiv 0 \bmod p\} \cup \{\infty\}.
+\] 
+Veamos cómo se visualizan las curvas en estos casos.
+
+\begin{lstlisting}[label={cod:ej5}, caption={Curva elíptica $y^2 + y=x^3-x $ sobre $ \mathbb{F}_{p}$.}, morekeywords={sage}]
+sage: E = EllipticCurve('37a')
+@interact
+def f(p=primes(2,500)):
+show(plot(E.change_ring(GF(p)),pointsize=30),
+axes=False, frame=True, gridlines="automatic",
+aspect_ratio=1)
+\end{lstlisting}
+
+\begin{figure}[H]
+	\centering
+	\begin{minipage}[b]{0.4\textwidth}
+	\centering
+	\includegraphics[width=0.6\textwidth]{EC_F_113}
+	\caption{Código \ref{cod:ej5} para $ p = 113 $}
+	\label{fig:ej5}
+	\end{minipage}
+	\begin{minipage}[b]{0.4\textwidth}
+		\centering
+	\includegraphics[width=0.6\textwidth]{EC_F_337}
+	\caption{Código \ref{cod:ej5} para $ p = 337 $}
+	\label{fig:ej6}
+	\end{minipage}
+\end{figure}
+
+En cuanto a las fórmulas para la operación del grupo, son las mismas que las definidas anteriormente solo que debemos añadir ``$ \mod p $'' a cada una de ellas. Ello conlleva, por ejemplo, la ``repetición'' de la recta que une ambos puntos. La discusión sobre su validez, especialmente en los casos especiales notados anteriormente, requiere de unas matemáticas más profundas en las que no vamos a entrar pero que están estudiadas de manera rigurosa.
 \subsection{Subrupos}
 Notamos que si, $ n, m \in \mathbb{Z} $ y $ P \in E $ se cumple que:
 \[
@@ -256,7 +299,7 @@ Así, los múltiplos de $ P $ son cerrados bajo la suma. Obtenemos de este modo 
 \[
 \min\{ n \in \mathbb{N}:\text{ } nP = \infty \text{ y } n | N\}.
 \]
-Normalmente, el proceso seguido en los algoritmos de criptografía de la curva elíptica es el opuesto, es decir, primero elegimos el orden del subgrupo que queremos y posteriormente hallamos el generador. Si el orden del subgrupo es un primo $ p $ el proceso a seguir es el siguiente: calculamos el cofactor $ h = N/n $, tomamos un punto aleatorio $ P \in E $ y obtenemos $ hP $. Si es $\infty$, tomamos un nuevo punto y si no, $ P $ es el generador deseado. Los órdenes de los subgrupos se suelen escoger de orden primo ya que Pohlig y Hellman probaron que un criptosistema es seguro si, y solo si, no es factible el cálculo del logaritmo discreto en grupos con orden un primo (REFERENCIAR). En la siguiente sección exponemos el problema del logaritmo discreto en el contexto de las curvas elípticas. \\
+Normalmente, el proceso seguido en los algoritmos de criptografía de la curva elíptica es el opuesto, es decir, primero elegimos el orden del subgrupo que queremos y posteriormente hallamos el generador. Si el orden del subgrupo es un primo $ p $ el proceso a seguir es el siguiente: calculamos el cofactor $ h = N/n $, tomamos un punto aleatorio $ P \in E $ y obtenemos $ hP $. Si es $\infty$, tomamos un nuevo punto y si no, $ P $ es el generador deseado. Los órdenes de los subgrupos se suelen escoger de orden primo ya que Pohlig y Hellman probaron que un criptosistema es seguro si, y solo si, no es factible el cálculo del logaritmo discreto en grupos con orden un primo (REFERENCIAR: https://ee.stanford.edu/~hellman/publications/28.pdf). En la siguiente sección exponemos el problema del logaritmo discreto en el contexto de las curvas elípticas. \\
 %----
 \section{El problema del logaritmo discreto}
 \label{sec:log}
@@ -346,12 +389,10 @@ Ahora entra en juego Bob que quiere validar la firma, $(r,s)$, a partir del mens
 \begin{enumerate}
 	\item Calculamos $u_1 \equiv$ \textit{$s^{-1}$ z} mod\textit{n}.
 	\item Calculamos $u_2 \equiv$ \textit{$s^{-1}$ r} mod\textit{n}.
-	\item Calculamos el punto $P = u_1G} + u_2 H_A$.	
+	\item Calculamos el punto $P = u_1G + u_2 H_A$.	
 \end{enumerate}
 
-La firma solo es válida si \textit{r} = \textit{$x_P$} \mod\textit{n}
-
-
+La firma solo es válida si $r = x_P \mod n$.
 \subsubsection*{Exactitud del algoritmo}
 Veamos que esta definición de \textit{P} del punto 3 coincide con la definición original de $P = kG $.
 
@@ -360,8 +401,8 @@ Partimos de \textit{P} = $u_1 G + u_2 H_A$, sustituimos el valor de la clave pú
 
 \begin{align}
 \begin{split}
-\textit{P} &= $u_1 G + u_2 H_A$\\ &= $u_1 G + u_2 d_A G$\\
-&= $ (u_1 + u_2 d_A) G$.\\
+\textit{P} &= u_1 G + u_2 H_A\\ &= u_1 G + u_2 d_A G\\
+&=  (u_1 + u_2 d_A) G.\\
 \end{split}
 \end{align}
 
@@ -369,9 +410,9 @@ Sustituimos los valores de $u_1$ y $u_2$ que hemos declarado en la verificación
 
 \begin{align}
 \begin{split}
-P &= ($u_1 + u_2 d_A) G$\\
-&= ($s^{-1}z + s^{-1} r d_A) G $ \\
-&= $s^{-1}(z + r d_A) G$.\\
+P &= (u_1 + u_2 d_A) G\\
+&= (s^{-1}z + s^{-1} r d_A) G  \\
+&= s^{-1}(z + r d_A) G.\\
 \end{split}
 \end{align}
 
@@ -382,8 +423,8 @@ Ahora nos fijamos en la definición de $s = k^{-1}(z + r d_A) \mod n$. Multiplic
 
 \begin{align}
 \begin{split}
-P &= $s^{-1}(z + r d_A) G$\\
-&= $kG$.
+P &= s^{-1}(z + r d_A) G\\
+&= kG.
 \end{split}
 \end{align}
 
@@ -398,8 +439,8 @@ Para descubrir la clave privada $d_S$ necesitamos calcular $k$ a partir de los v
 \begin{enumerate}
 	\item $r_1$ es igual a $r_2$, puesto que $ r = x_P \mod n$ y $P = kG$ es el mismo para las dos firmas.
 	\item Observamos que  $(s_1 - s_2) \mod n \equiv k^{-1} (z_1 - z_2) \mod n$ viene directamente de la definición de $s$.
-	\item $k(s_1 - s_2) \mod n$ \equiv $(z_1 - z_2) \mod n$.
-	\item $k$  \equiv $(z_1 - z_2) (s_1 -s_2)^{-1} \mod n$.
+	\item $k(s_1 - s_2) \mod n \equiv (z_1 - z_2) \mod n$.
+	\item $k  \equiv (z_1 - z_2) (s_1 -s_2)^{-1} \mod n$.
 \end{enumerate}
 
 Ahora despejamos $d_S$ de la definición de $s$ y obtenemos que:
@@ -407,15 +448,46 @@ Ahora despejamos $d_S$ de la definición de $s$ y obtenemos que:
 
 \begin{align}
 \begin{split}
-$s &\equiv k^{-1}(z + r d_S) \mod n$\\
-$d_S &\equiv r^{-1}(sk - z) \mod n$.\\
+s &\equiv k^{-1}(z + r d_S) \mod n\\
+d_S &\equiv r^{-1}(sk - z) \mod n.\\
 \end{split}
 \end{align}
 
 Así hemos conseguido la clave privada con los valores que conocemos.
 
-\subsection{Curvas famosas}
+\section{Curvas elípticas más utilizadas}
+Como hemos explicado, los participantes en los algoritmos de cifrado en la curva elíptica deben escoger los mismos parámetros para el dominio. Entre ellos se encuentra la propia curva. Actualmente, existen curvas que son más usadas que otras debido, por ejemplo, al nivel de seguridad que tiene en el cálculo del problema del logaritmo discreto. Podemos nombrar:
+\begin{enumerate}
+\item Spec256k1 (o Curve25519): se utiliza para ECDSA en el modelo criptográfico de Bitcoin. Viene dada por:
+\[
+y^2 = x^3 + 7.
+\]
+Se suele utilizar como punto base
+\begin{equation*}
+\begin{split}
+G = (&0\texttt{x}79be667ef9dcbbac55a06295ce870b07029bfcdb2dce28d959f2815b16f81798, \\
+		&0\texttt{x}483ada7726a3c4655da4fbfc0e1108a8fd17b448a68554199c47d08ffb10d4b8),
+\end{split}
+\end{equation*}
+que nos aporta un grupo de orden
+\[
+n =2^{256}-0\texttt{x}14551231950b75fc4402da1732fc9bebf.
+\]
 
+(REFERENCIA: https://es.bitcoin.it/wiki/Secp256k1)
+\item NIST P-256: es la que trae \textit{OpenSSL} por defecto y he existe una gran cantidad de métodos para optimizar su uso. \\
+(REFERENCIA: https://tools.ietf.org/html/rfc7748\#page-4) \\
+REFERENCIA: https://es.wikipedia.org/wiki/Curve25519
+\item Curve25519: es una de las curvas más rápidas que existen actualmente y su implementación de referencia es de dominio público. Viene dada por
+\[
+y^2 = x^3 + 48662x^2 + x
+\]
+definida sobre el cuerpo finito con $ 2^{255} - 19 $ elementos el punto base tal que $ x ⁼ 9 $. Esto nos aporta un subgrupo de orden $ 2{^252 }+ 0\texttt{x}14def9dea2f79cd65812631a5cf5d3ed $. \\
+(REFERENCIA: https://es.wikipedia.org/wiki/Curve25519) \\
+REFERENCIA: https://tools.ietf.org/html/rfc7748\#page-4
+\item  Curve448: ofrece potencialmente 224 bits de seguridad y aporta un gran rendimiento. Su implementación base está disponible bajo una licencia del MIT. \\
+(REFERENCIA: https://es.wikipedia.org/wiki/Curva448)
+\end{enumerate}
 \section{Comparación con RSA}
 \label{sec:RSA}
 La principal diferencia entre la criptografía de la curva elíptica y la de RSA es el problema en el que basan su seguridad. La curva elíptica lo hace en el problema del logaritmo discreto, mientras que RSA lo hace en el problema de factorización. Otra diferencia fundamental es la cantidad de almacenamiento que se necesita para guardar una clave al mismo nivel de seguridad. Por ejemplo, si para guardar una clave de RSA se necesitan 1024 bits, para almacenar la de ECC se requiere de 160. Las diferencias son aún mayores cuando aumenta el nivel de seguridad, para RSA son necesarios 15360 bits mientras que para ECC tan solo 521 bits.
@@ -429,5 +501,5 @@ Los algoritmos más rápidos para el cómputo de logaritmos discretos sobre una 
 \section{Conclusiones}
 
 \newpage
-\printbibliography
+%\printbibliography
 \end{document}
