--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -15,4 +15,45 @@
 	pages = {10,11}
 }
 
+@misc{ECC_add,
+	title = "Elliptic Curve Cryptography",
+	howpublished = {\url{https://sinhvientot.net/elliptic-curve-cryptography/}}
+}
+
+@article{pohlig1978improved,
+	title={An improved algorithm for computing logarithms over GF (p) and its cryptographic significance (Corresp.)},
+	author={Pohlig, Stephen and Hellman, Martin},
+	journal={IEEE Transactions on information Theory},
+	volume={24},
+	number={1},
+	pages={106--110},
+	year={1978},
+	publisher={IEEE}
+}
+
+@misc{Secp256k1,
+	title = "Secp256k1",
+	howpublished = {\url{https://es.bitcoin.it/wiki/Secp256k1}}
+}
+
+@misc{rfc7748,
+	title = "RFC 7748: Recomended curves",
+	howpublished = {\url{https://tools.ietf.org/html/rfc7748#page-4}}
+}
+
+@misc{curve25519,
+	title = "Curve25519",
+	howpublished = {\url{https://es.wikipedia.org/wiki/Curve25519}}
+}
+
+@misc{curve448,
+	title = "Curva 448",
+	howpublished = {\url{ https://es.wikipedia.org/wiki/Curva448}}
+}
+
+@misc{mostPopEC,
+	title = "Everyone Loves Curves! But Which Elliptic Curve is the Most Popular?",
+	howpublished = {\url{https://malware.news/t/everyone-loves-curves-but-which-elliptic-curve-is-the-most-popular/17657}}
+}
+
 
