--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,4 +1,3 @@
-
 @inbook{washington_elliptic_2008,
 	title = {Elliptic Curves: Number Theory and Cryptography, Second Edition},
 	volume = {20080550},
@@ -15,9 +14,27 @@
 	pages = {10,11}
 }
 
+@misc{tos_elliptic_2008,
+	title = {Elliptic curve catalog},
+	copyright = {Public domain},
+	url = {https://commons.wikimedia.org/wiki/File:EllipticCurveCatalog.svg#/media/File:EllipticCurveCatalog.svg},
+	urldate = {2019-12-07},
+	collaborator = {{Tos}},
+	month = feb,
+	year = {2008}
+}
+
 @misc{ECC_add,
 	title = "Elliptic Curve Cryptography",
 	howpublished = {\url{https://sinhvientot.net/elliptic-curve-cryptography/}}
+}
+
+@online{schoof_group_order,
+	title = {Schoof's algorithm},
+	url = {https://en.wikipedia.org/wiki/Schoof%27s_algorithm},
+	author = {Wikipedia},
+	urldate = {2019-11-01},
+	langid = {english},
 }
 
 @article{pohlig1978improved,
@@ -31,16 +48,24 @@
 	publisher={IEEE}
 }
 
+@misc{noauthor_elliptic_nodate,
+	title = {Elliptic {Curve} {Cryptography}: {ECDH} and {ECDSA} - {Andrea} {Corbellini}},
+	url = {https://andrea.corbellini.name/2015/05/30/elliptic-curve-cryptography-ecdh-and-ecdsa/},
+	urldate = {2019-12-07}
+}
+
 @misc{Secp256k1,
 	title = "Secp256k1",
 	howpublished = {\url{https://es.bitcoin.it/wiki/Secp256k1}}
 }
 
-@misc{rfc7748,
-	title = "RFC 7748: Recomended curves",
-	howpublished = {\url{https://tools.ietf.org/html/rfc7748#page-4}}
+@misc{langley_elliptic_nodate,
+	title = {Elliptic {Curves} for {Security}},
+	url = {https://tools.ietf.org/html/rfc7748#page-4},
+	language = {en},
+	urldate = {2019-12-07},
+	author = {Langley, Adam and Hamburg, Mike}
 }
-
 @misc{curve25519,
 	title = "Curve25519",
 	howpublished = {\url{https://es.wikipedia.org/wiki/Curve25519}}
