--- a/src/Curvas elípticas.ipynb
+++ b/src/Curvas elípticas.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "K = GF(2^(255)-19); # Cuerpo\n",
@@ -31,18 +33,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta el la función para generación de la llave privada (número) y la pública (punto)"
+    "Esta el la función para generación de la clave privada (número) y la pública (punto de la curva)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def obtenerClaves(G, n):\n",
     "    d = ZZ.random_element(1, n-1)\n",
-    "    H = d*G\n",
+    "    H = d * G\n",
     "    \n",
     "    return d,H #Privada / Pública "
    ]
@@ -51,13 +55,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtenemos una pareja de claves"
+    "Obtenemos una pareja de claves."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -86,28 +92,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Función para firmar un mensaje y otra para verificar la firma"
+    "Función para firmar un mensaje y otra para verificar la firma."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def firmarEC(mensaje, G, n, d): #Menasaje / Generador subgrupo / Orden subgrupo / Clave privada\n",
+    "def firmarEC(mensaje, G, n, d): # Mensaje / Generador subgrupo / Orden subgrupo / Clave privada\n",
     "    z = hash(mensaje) % n; # Hash del mensaje\n",
     "    \n",
     "    k = ZZ.random_element(1, n-1)\n",
-    "    P = k*G; \n",
+    "    P = k * G; \n",
     "    r = P[0]; \n",
     "    r = Integer(r) % n;\n",
-    "    k_inv = inverse_mod(k,n);\n",
-    "    s = k_inv*(z+r*d) % n;\n",
+    "    k_inv = inverse_mod(k, n);\n",
+    "    s = k_inv*(z + r*d) % n;\n",
     "\n",
     "    return r, s\n",
     "\n",
-    "def verificarFirmaEC(mensaje, G, n, H, r, s): #Mensaje recibido / Generador subgrupo / Orden subgrupo / clave pública / valores firma (r, s)\n",
+    "def verificarFirmaEC(mensaje, G, n, H, r, s): # Mensaje recibido / Generador subgrupo / Orden subgrupo / clave pública / valores firma (r, s)\n",
     "    z = hash(mensaje) % n; # Hash del mensaje\n",
     "    \n",
     "    u1 = ((1/s)*z) % n; \n",
@@ -132,16 +140,20 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "mensaje = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\""
+    "mensaje = \"Bob, me he comprado un gatito. Puedes venir a verlo esta tarde\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r, s = firmarEC(mensaje, G, n, dA)"
@@ -157,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -171,7 +185,7 @@
     }
    ],
    "source": [
-    "mensajeDescifrado = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\"\n",
+    "mensajeDescifrado = \"Bob, me he comprado un gatito. Puedes venir a verlo esta tarde\"\n",
     "verificarFirmaEC(mensajeDescifrado, G, n, HA, r, s)"
    ]
   },
@@ -179,16 +193,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bob comprueba que efectivamente se lo ha enviado Alice y se organizar para ver al gatito. Alice, se da cuenta de que no han especificado hora y le envía otro mensaje para concretar. "
+    "Bob comprueba que efectivamente se lo ha enviado Alice y se organiza para ir a ver al gatito. Alice, se da cuenta de que no han especificado hora y le envía otro mensaje para concretar. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "mensaje2 = \"Nos vemos en mi casa a las 14:00\"\n",
+    "mensaje2 = \"Nos vemos en mi casa a las 16:00\"\n",
     "r2, s2 = r, s = firmarEC(mensaje2, G, n, dA)"
    ]
   },
@@ -196,13 +212,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Carol, está eenvidiosa con ambos porque ella también quiere ver al gatito. Intercepta el mensaje enviado por Alice y lo cambia por otro y se lo envía a Bob haciéndose pasar por Alice. Bob cuando descifra el mensaje obtiene"
+    "Carol, está envidiosa porque ella también quiere ver al gatito. Intercepta el mensaje enviado por Alice, lo cambia por otro y se lo envía a Bob haciéndose pasar por Alice. Bob cuando descifra el mensaje obtiene:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -224,21 +242,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bob ve que el mensaje no lo ha enviado Alice por lo que no le da credibilidad al mismo"
+    "Bob ve que el mensaje no lo ha enviado Alice por lo que no le da credibilidad al mismo."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.8",
-   "language": "sage",
+   "display_name": "SageMath 7.5.1",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
@@ -251,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
