--- a/src/elliptic_curves.ipynb
+++ b/src/elliptic_curves.ipynb
@@ -11,6 +11,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -34,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -56,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -76,8 +81,8 @@
    "source": [
     "E = EllipticCurve('37a')\n",
     "@interact\n",
-    "def f(p=primes(2,500)):\n",
-    "    show(plot(E.change_ring(GF(p)),pointsize=30),\n",
+    "def f(p=primes(2, 500)):\n",
+    "    show(plot(E.change_ring(GF(p)), pointsize=30),\n",
     "    axes=False, frame=True, gridlines=\"automatic\",\n",
     "    aspect_ratio=1)"
    ]
@@ -85,11 +90,13 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def f(p=primes(2,500)):\n",
-    "    show(plot(E.change_ring(GF(p)),pointsize=30),\n",
+    "def f(p=primes(2, 500)):\n",
+    "    show(plot(E.change_ring(GF(p)), pointsize=30),\n",
     "    axes=False, frame=True, gridlines=\"automatic\",\n",
     "    aspect_ratio=1, gridlinesstyle={'rgbcolor':(0.7,0.7,0.7)})"
    ]
@@ -97,7 +104,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "ValueError",
@@ -132,15 +141,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.8",
-   "language": "sage",
+   "display_name": "SageMath 7.5.1",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
@@ -153,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
