Actualizados fuente y añadido \nocite

--- a/src/Curvas elípticas.ipynb
+++ b/src/Curvas elípticas.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(955420798291222162383239997443926117836422561522270142103612702475525932480,\n",
-       " (5121923852907061438581061465499853009050777329813211467055215122507590041839 : 3409004576848160780621935864572296721639491914975125550113634936524990286987 : 1))"
+       "(4989624994646108927478767679354577321528002657589391412334041221744160794401,\n",
+       " (11640419254588643055510700971845636683830616632175781321906804827047413409632 : 49251420118687327900932745439496039565168931334141932692489192542000574639094 : 1))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,19 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def firmarEC(mensaje, G, n, d): #Menasaje / Generador subgrupo / Orden subgrupo / Clave privada\n",
     "    z = hash(mensaje) % n; # Hash del mensaje\n",
+    "    valido = False\n",
     "    \n",
-    "    k = ZZ.random_element(1, n-1)\n",
-    "    P = k*G; \n",
-    "    r = P[0]; \n",
-    "    r = Integer(r) % n;\n",
-    "    k_inv = inverse_mod(k,n);\n",
-    "    s = k_inv*(z+r*d) % n;\n",
+    "    while valido == False:\n",
+    "        k = ZZ.random_element(1, n-1)\n",
+    "        P = k*G; \n",
+    "        r = P[0]; \n",
+    "        r = Integer(r) % n;\n",
+    "        if r!= 0:\n",
+    "            k_inv = inverse_mod(k,n);\n",
+    "            s = k_inv*(z+r*d) % n;\n",
+    "            if s!= 0:\n",
+    "                valido = True\n",
     "\n",
     "    return r, s\n",
     "\n",
@@ -131,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +170,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +215,7 @@
        "False"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
