--- a/trabajo.tex
+++ b/trabajo.tex
@@ -497,5 +497,6 @@ Los algoritmos más rápidos para el cómputo de logaritmos discretos sobre una 
 \section{Conclusiones}
 
 \newpage
+\nocite{*}
 %\printbibliography
 \end{document}
