Añade inicio OpenSSL demo

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -81,4 +81,14 @@
 	howpublished = {\url{https://malware.news/t/everyone-loves-curves-but-which-elliptic-curve-is-the-most-popular/17657}}
 }
 
+@misc{gentle_introduction,
+	title = {Elliptic {Curve} {Cryptography}: a gentle introduction - {Andrea} {Corbellini}},
+	url = {https://andrea.corbellini.name/2015/05/17/elliptic-curve-cryptography-a-gentle-introduction/},
+	urldate = {2019-12-08}
+}
 
+@misc{noauthor_command_nodate,
+	title = {Command {Line} {Elliptic} {Curve} {Operations} - {OpenSSLWiki}},
+	url = {https://wiki.openssl.org/index.php/Command_Line_Elliptic_Curve_Operations},
+	urldate = {2019-12-08}
+}
