--- a/trabajo.tex
+++ b/trabajo.tex
@@ -98,12 +98,12 @@
 
 % Bibliografía
 
-%\usepackage[sorting=none, style=apa, isbn=true]{biblatex}
-%\DefineBibliographyStrings{spanish}{
-% urlseen = {Último acceso},
-% retrieved = {Último acceso},
-%}
-%\addbibresource{bibliografia.bib}
+\usepackage[sorting=none, style=apa, isbn=true]{biblatex}
+\DefineBibliographyStrings{spanish}{
+urlseen = {Último acceso},
+retrieved = {Último acceso},
+}
+\addbibresource{bibliografia.bib}
 
 %Apéndices
 \usepackage[toc,title,page]{appendix}
@@ -148,9 +148,7 @@ En el desarrollo de la criptografía, con el objetivo de poder mantener comunica
 En 1985 es cuando por primera vez surge la idea de utilizar esta herramienta matemática con fines criptográficos, adaptando el problema del logaritmo discreto para obtener una analogía en puntos de una curva elíptica en vez de en un cuerpo finito.\\
 
 El trabajo desarrollado comienza con una exposición, en la Sección \ref{sec:curva}, sobre las curvas elípticas. Se muestra su definición y las operaciones de suma y producto por escalares utilizadas para definir una estructura de grupo sobre las mismas. Además, se comenta cómo conseguir un subgrupo a partir de un punto de la curva, pues será necesario para las aplicaciones criptográficas. Continuamos en la Sección \ref{sec:log} formulando el problema del logaritmo discreto y la dificultad para resolverlo, pues en ello depende la seguridad de la criptografía de la curva elíptica. Pasamos entonces, en la Sección \ref{sec:alg}, a explicar dos algoritmos utilizados en la criptografía de la curva elíptica: ECDH (para el intercambio de claves) y ECDSA (para firmar mensajes). También recogemos, en la Sección \ref{sec:cur_usa}, algunas de las curvas más usadas en la actualidad en este tipo de criptografía.
-Por último, se compara, en la Sección \ref{sec:RSA}, los sistemas basados en curvas elípticas con los basados en RSA, otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios.\\
-
-Además, se ha utilizado SageMath para representar curvas elípticas y para realizar una implementación propia del algoritmo ECDSA, puesto que esta herramienta contiene funciones específicas para el tratamiento de curvas elípticas. El código se encuentra en la carpeta \texttt{src}. En el archivo \texttt{elliptic\_curves.ipynb} se encuentra la implementación de los ejemplos mostrados en este archivo. En el archivo \texttt{Curvas elípticas.ipynb} se encuentra la implementación del algoritmo ECDSA y una situación hipotética de uso en la que Alice y Bob utilizan la firma de mensajes.
+A continuación, se compara, en la Sección \ref{sec:RSA}, los sistemas basados en curvas elípticas con los basados en RSA, otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios. Por último, se incluye la información necesaria para una demostración práctica. En la Sección \ref{sec:demo} comentaremos dónde encontrar los archivos \texttt{.ipynb} implementados y las operaciones necesarias para trabajar con curvas elípticas a través de la herramienta \texttt{openssl}.\\
 
 \section{Curva Elíptica}
 \label{sec:curva}
@@ -395,6 +393,7 @@ Ahora entra en juego Bob que quiere validar la firma, $(r,s)$, a partir del mens
 \end{enumerate}
 
 La firma solo es válida si $r = x_P \mod n$.
+
 \subsubsection*{Exactitud del algoritmo}
 Veamos que esta definición de \textit{P} del punto 3 coincide con la definición original de $P = kG $.
 
@@ -480,7 +479,7 @@ que nos aporta un grupo de orden
 n =2^{256}-0\texttt{x}14551231950b75fc4402da1732fc9bebf.
 \]
 
-\item NIST P-256: es la que trae \textit{OpenSSL} por defecto y he existe una gran cantidad de métodos para optimizar su uso. \\
+\item NIST P-256: es la que trae \textit{OpenSSL} por defecto y existen una gran cantidad de métodos para optimizar su uso. \\
 
 \item Curve25519: es una de las curvas más rápidas que existen actualmente y su implementación de referencia es de dominio público (\cite{langley_elliptic_nodate}). Viene dada por
 \[
@@ -490,6 +489,7 @@ definida sobre el cuerpo finito con $ 2^{255} - 19 $ elementos el punto base tal
 
 \item  Curve448: ofrece potencialmente 224 bits de seguridad y aporta un gran rendimiento (\cite{curve448}). Su implementación base está disponible bajo una licencia del MIT. \\
 \end{enumerate}
+
 \section{Comparación con RSA}
 \label{sec:RSA}
 La principal diferencia entre la criptografía de la curva elíptica y la de RSA es el problema en el que basan su seguridad. La curva elíptica lo hace en el problema del logaritmo discreto, mientras que RSA lo hace en el problema de factorización. Otra diferencia fundamental es la cantidad de almacenamiento que se necesita para guardar una clave al mismo nivel de seguridad. Por ejemplo, si para guardar una clave de RSA se necesitan 1024 bits, para almacenar la de ECC se requiere de 160. Las diferencias son aún mayores cuando aumenta el nivel de seguridad, para RSA son necesarios 15360 bits mientras que para ECC tan solo 521 bits.\\ %TODO: referenciar
@@ -500,9 +500,93 @@ Por otro lado, la generación de la clave y la firma es considerablemente más r
 
 Los algoritmos más rápidos para el cómputo de logaritmos discretos sobre una curva elíptica son Pollard's \textit{rho} y \textit{baby-step giant-step}. Destaca uno en particular que es el algoritmo ``criba general del cuerpo de números'' el más rápido conocido a día de hoy para la factorización de enteros, que además se puede usar para el logaritmo discreto.
 
-%\section{Conclusiones}
+\section{Demostración práctica}
+\label{sec:semo}
+\subsection{SageMath}
+Se ha utilizado SageMath para representar curvas elípticas y para realizar una implementación propia del algoritmo ECDSA, puesto que esta herramienta software contiene funciones específicas para el tratamiento de curvas elípticas.\\
+El código se encuentra en la carpeta \texttt{src}. En el archivo \texttt{elliptic\_curves.ipynb} se recoge la implementación de los ejemplos mostrados en este archivo. En el archivo \texttt{Curvas elípticas.ipynb} está la implementación del algoritmo ECDSA y una situación hipotética de uso en la que Alice y Bob utilizan la firma de mensajes.
+
+\subsection{OpenSSL}
+Si en la práctica quisieramos usar la criptografía de la curva elíptica, no utilizaríamos SageMath, ni implementaciones propias del algoritmo. Probablemente aprovecharíamos la herramienta OpenSSL (\cite{noauthor_command_nodate}), que los únicos algoritmos de este tipo que soporta son, precisamente, ECDH y ECDSA.
+
+\subsubsection*{Generar las claves}
+Las claves pública y privada se guardarán en archivos con formato \texttt{.pem}, cifrado o no cifrado.
+
+OpenSSL contiene muchas curvas predefinidas que podemos usar, para verlas solo hay que ejecutar el comando mostrado en el código \ref{cod:list_curves}.
+
+\begin{lstlisting}[language=bash, label={cod:list_curves}, caption={OpenSSL: listar curvas por defecto}, morekeywords={list_curves}]
+ $ openssl ecparam -list_curves
+  secp112r1 : SECG/WTLS curve over a 112 bit prime field
+  secp112r2 : SECG curve over a 112 bit prime field
+  secp128r1 : SECG curve over a 128 bit prime field
+  secp128r2 : SECG curve over a 128 bit prime field
+  secp160k1 : SECG curve over a 160 bit prime field
+  secp160r1 : SECG curve over a 160 bit prime field
+  secp160r2 : SECG/WTLS curve over a 160 bit prime field
+  secp192k1 : SECG curve over a 192 bit prime field
+  secp224k1 : SECG curve over a 224 bit prime field
+  secp224r1 : NIST/SECG curve over a 224 bit prime field
+  secp256k1 : SECG curve over a 256 bit prime field
+  secp384r1 : NIST/SECG curve over a 384 bit prime field
+  secp521r1 : NIST/SECG curve over a 521 bit prime field
+  prime192v1: NIST/X9.62/SECG curve over a 192 bit prime field
+  prime192v2: X9.62 curve over a 192 bit prime field
+  prime192v3: X9.62 curve over a 192 bit prime field
+  prime239v1: X9.62 curve over a 239 bit prime field
+  prime239v2: X9.62 curve over a 239 bit prime field
+  prime239v3: X9.62 curve over a 239 bit prime field
+  prime256v1: X9.62/SECG curve over a 256 bit prime field
+  sect113r1 : SECG curve over a 113 bit binary field
+  sect113r2 : SECG curve over a 113 bit binary field
+  sect131r1 : SECG/WTLS curve over a 131 bit binary field
+  ...
+\end{lstlisting}
+
+Para generar un archivo con los parámetros de la curva ejecutamos el Código \ref{cod:param}, donde podemos cambiar \texttt{secp256k1} por la curva elegida.
+
+\begin{lstlisting}[language=bash, label={cod:EC}, caption={Generar los parámetros de la curva}, morekeywords={name, out}]
+  $ openssl ecparam -name secp256k1 -out secp256k1.pem
+  $ cat secp2561.pem
+  -----BEGIN EC PARAMETERS-----
+  BgUrgQQACg==
+  -----END EC PARAMETERS-----
+\end{lstlisting}
+
+Para generar la pareja de clave privada tenemos dos opciones: generarla a través de unos parámetros de la curva preexistentes (Código \ref{cod:gen_cur_pre}) o simplemente seleccionando el nombre de la curva (Código \ref{cod:gen_cur}).
+
+\begin{lstlisting}[language=bash, label={cod:gen_cur_pre}, caption={Crear clave privada, parámetros de curva preexistentes}, morekeywords={out, pubout, genkey}]
+  $ openssl ecparam -in secp256k1.pem -genkey -noout -out secp256k1-key.pem
+  $ cat secp256k1-key.pem 
+  -----BEGIN EC PRIVATE KEY-----
+  MHQCAQEEIAbXuq9SpxisBn/p4Vk+Ce4aLIJZgJpg9Hp0CfZs5PKAoAcGBSuBBAAK
+  oUQDQgAEdr/qwSqOx966+SLboZOlalO2QTCFrwbiFaLcBhqPmjk+D8FnWo6HLcrT
+  nBhoVk4IAUhsFGMgudcVYwgOFuHAXQ==
+  -----END EC PRIVATE KEY-----
+\end{lstlisting}
+
+\begin{lstlisting}[language=bash, label={cod:gen_cur}, caption={Crear clave privada a partir del nombre de la curva}, morekeywords={out, genkey, noout, name}]
+  $ openssl ecparam -name secp256k1 -genkey -noout -out secp256k1-key.pem
+  $ cat secp256k1-key.pem
+  -----BEGIN EC PRIVATE KEY-----
+  MHQCAQEEIH9lFVGJd8SVrSd47l3MAjx6SiapcAw6j+SxDmBYXzJ6oAcGBSuBBAAK
+  oUQDQgAEiG8RZTai+T9mjFFoCPcanTvDfsQ2gHSvgHAtvDItnLVlc0TVo+YRiT/+
+  81r+9k1Fe6sHi8aGNycLHKiyY8Yz9Q==
+  -----END EC PRIVATE KEY-----
+\end{lstlisting}
+
+Una vez tenemos la clave privada para a partir de ella generar la clave pública requiere de ejecutar el comando mostrado en el Código \ref{cod:pub}
+
+\begin{lstlisting}[language=bash, label={cod:pub}, caption={Crear la clave pública a partir de la privada}, morekeywords={out, pubout}]
+  $ openssl ec -in secp256k1-key.pem -pubout -out ecpubkey.pem
+  read EC key
+  writing EC key
+  -----BEGIN PUBLIC KEY-----
+  MFYwEAYHKoZIzj0CAQYFK4EEAAoDQgAEiG8RZTai+T9mjFFoCPcanTvDfsQ2gHSv
+  gHAtvDItnLVlc0TVo+YRiT/+81r+9k1Fe6sHi8aGNycLHKiyY8Yz9Q==
+  -----END PUBLIC KEY-----
+\end{lstlisting}
 
 \newpage
 \nocite{*}
-%\printbibliography
+\printbibliography
 \end{document}
