--- a/src/Curvas elípticas.ipynb
+++ b/src/Curvas elípticas.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Demostración Curvas Elípticas"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Primero, escogemos la curva Curve25519 recomendada en el RFC7748 (https://tools.ietf.org/html/rfc7748#page-4).\n",
     "Damos el cuerpo, la curva y el punto G base del subgrupo (también recomendado en el artículo)."
@@ -18,7 +24,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "K = GF(2^(255)-19); # Cuerpo\n",
@@ -29,7 +39,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Esta el la función para generación de la llave privada (número) y la pública (punto)"
    ]
@@ -37,7 +50,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def obtenerClaves(G, n):\n",
@@ -49,7 +66,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Obtenemos una pareja de claves"
    ]
@@ -57,7 +77,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -77,14 +101,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## ECDSA"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Función para firmar un mensaje y otra para verificar la firma"
    ]
@@ -92,7 +122,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def firmarEC(mensaje, G, n, d): #Menasaje / Generador subgrupo / Orden subgrupo / Clave privada\n",
@@ -129,7 +163,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Pongamos ahora en práctica el métdodo implementado. Supongamos que Alice desea enviar un mensaje a Bob. Decide firmarlo y enviárselo. (La parte de encriptar el archivo no lo tenemos en cuenta, solo nos interesa la firma)"
    ]
@@ -137,7 +174,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "mensaje = \"Bob, me comprado un gatito. Puedes venir a verlo esta tarde\""
@@ -146,7 +187,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "r, s = firmarEC(mensaje, G, n, dA)"
@@ -154,7 +199,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Suponemos que Bob tras descifrar el mensaje obtiene el siguiente y decide ver si verdaderamente lo ha enviado Alice."
    ]
@@ -162,7 +210,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -182,7 +234,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Bob comprueba que efectivamente se lo ha enviado Alice y se organizar para ver al gatito. Alice, se da cuenta de que no han especificado hora y le envía otro mensaje para concretar. "
    ]
@@ -190,7 +245,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "mensaje2 = \"Nos vemos en mi casa a las 14:00\"\n",
@@ -199,7 +258,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Carol, está eenvidiosa con ambos porque ella también quiere ver al gatito. Intercepta el mensaje enviado por Alice y lo cambia por otro y se lo envía a Bob haciéndose pasar por Alice. Bob cuando descifra el mensaje obtiene"
    ]
@@ -207,7 +269,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -227,7 +293,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Bob ve que el mensaje no lo ha enviado Alice por lo que no le da credibilidad al mismo"
    ]
@@ -235,15 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.8",
-   "language": "sage",
+   "display_name": "SageMath 8.1",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
@@ -256,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
