--- a/src/elliptic_curves.ipynb
+++ b/src/elliptic_curves.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Curvas elípticas"
    ]
@@ -11,6 +14,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -34,7 +40,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -56,7 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -85,8 +99,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.8",
-   "language": "sage",
+   "display_name": "SageMath 8.1",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
@@ -99,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
