--- a/trabajo.tex
+++ b/trabajo.tex
@@ -148,7 +148,7 @@ En el desarrollo de la criptografía, con el objetivo de poder mantener comunica
 En 1985 es cuando por primera vez surge la idea de utilizar esta herramienta matemática con fines criptográficos, adaptando el problema del logaritmo discreto para obtener una analogía en puntos de una curva elíptica en vez de en un cuerpo finito.\\
 
 El trabajo desarrollado comienza con una exposición, en la Sección \ref{sec:curva}, sobre las curvas elípticas. Se muestra su definición y las operaciones de suma y producto por escalares utilizadas para definir una estructura de grupo sobre las mismas. Además, se comenta cómo conseguir un subgrupo a partir de un punto de la curva, pues será necesario para las aplicaciones criptográficas. Continuamos en la Sección \ref{sec:log} formulando el problema del logaritmo discreto y la dificultad para resolverlo, pues en ello depende la seguridad de la criptografía de la curva elíptica. Pasamos entonces, en la Sección \ref{sec:alg}, a explicar dos algoritmos utilizados en la criptografía de la curva elíptica: ECDH (para el intercambio de claves) y ECDSA (para firmar mensajes). También recogemos, en la Sección \ref{sec:cur_usa}, algunas de las curvas más usadas en la actualidad en este tipo de criptografía.
-A continuación, se compara, en la Sección \ref{sec:RSA}, los sistemas basados en curvas elípticas con los basados en RSA, otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios. Por último, se incluye la información necesaria para una demostración práctica. En la Sección \ref{sec:demo} comentaremos dónde encontrar los archivos \texttt{.ipynb} implementados y las operaciones necesarias para trabajar con curvas elípticas a través de la herramienta \texttt{openssl}.\\
+A continuación, se compara, en la Sección \ref{sec:RSA}, los sistemas basados en curvas elípticas con los basados en RSA, otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios. Por último, se incluye la información necesaria para una demostración práctica. En la Sección \ref{sec:demo} comentaremos el contenido de los archivos \texttt{.ipynb} y cómo, a través de la herramienta \texttt{openssl}, generaremos las claves públicas y privadas con curvas elípticas\\
 
 \section{Curva Elíptica}
 \label{sec:curva}
