--- a/trabajo.tex
+++ b/trabajo.tex
@@ -98,12 +98,12 @@
 
 % Bibliografía
 
-%\usepackage[sorting=none, style=apa, isbn=true]{biblatex}
-%\DefineBibliographyStrings{spanish}{
-%urlseen = {Último acceso},
-%retrieved = {Último acceso},
-%}
-%\addbibresource{bibliografia.bib}
+\usepackage[sorting=none, style=apa, isbn=true]{biblatex}
+\DefineBibliographyStrings{spanish}{
+urlseen = {Último acceso},
+retrieved = {Último acceso},
+}
+\addbibresource{bibliografia.bib}
 
 %Apéndices
 \usepackage[toc,title,page]{appendix}
@@ -148,7 +148,7 @@ En el desarrollo de la criptografía, con el objetivo de poder mantener comunica
 En 1985 es cuando por primera vez surge la idea de utilizar esta herramienta matemática con fines criptográficos, adaptando el problema del logaritmo discreto para obtener una analogía en puntos de una curva elíptica en vez de en un cuerpo finito.\\
 
 El trabajo desarrollado comienza con una exposición, en la Sección \ref{sec:curva}, sobre las curvas elípticas. Se muestra su definición y las operaciones de suma y producto por escalares utilizadas para definir una estructura de grupo sobre las mismas. Además, se comenta cómo conseguir un subgrupo a partir de un punto de la curva, pues será necesario para las aplicaciones criptográficas. Continuamos en la Sección \ref{sec:log} formulando el problema del logaritmo discreto y la dificultad para resolverlo, pues en ello depende la seguridad de la criptografía de la curva elíptica. Pasamos entonces, en la Sección \ref{sec:alg}, a explicar dos algoritmos utilizados en la criptografía de la curva elíptica: ECDH (para el intercambio de claves) y ECDSA (para firmar mensajes). También recogemos, en la Sección \ref{sec:cur_usa}, algunas de las curvas más usadas en la actualidad en este tipo de criptografía.
-A continuación, se compara, en la Sección \ref{sec:RSA}, los sistemas basados en curvas elípticas con los basados en RSA, otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios. Por último, se incluye la información necesaria para una demostración práctica. En la Sección \ref{sec:demo} comentaremos el contenido de los archivos \texttt{.ipynb} y cómo, a través de la herramienta \texttt{openssl}, generaremos las claves públicas y privadas con curvas elípticas\\
+A continuación, se compara, en la Sección \ref{sec:RSA}, los sistemas basados en curvas elípticas con los basados en RSA, otro criptosistema de clave pública que compitió con la criptografía de la curva elíptica en sus inicios. Por último, se incluye la información necesaria para una demostración práctica. En la Sección \ref{sec:demo} comentaremos el contenido de los archivos \texttt{.ipynb} y cómo, a través de la herramienta \texttt{openssl}, generaremos claves públicas y privadas con curvas elípticas.\\
 
 \section{Curva Elíptica}
 \label{sec:curva}
@@ -204,7 +204,7 @@ En la Figura \ref{fig:EllipticCurveCatalog} tenemos una tabla con la forma de la
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\textwidth]{EllipticCurveCatalog}
+    \includegraphics[width=0.55\textwidth]{EllipticCurveCatalog}
     \caption{Ejemplos de curvas elípticas sobre $\mathbb{R}$ (\cite{tos_elliptic_2008})}
     \label{fig:EllipticCurveCatalog}
 \end{figure}
@@ -392,7 +392,7 @@ Ahora entra en juego Bob que quiere validar la firma, $(r,s)$, a partir del mens
 	\item Calculamos el punto $P = u_1G + u_2 H_A$.	
 \end{enumerate}
 
-La firma solo es válida si $r = x_P \mod n$.
+La firma solo es válida si $r \equiv x_P \mod n$.
 
 \subsubsection*{Exactitud del algoritmo}
 Veamos que esta definición de \textit{P} del punto 3 coincide con la definición original de $P = kG $.
@@ -420,7 +420,7 @@ P &= (u_1 + u_2 d_A) G\\
 Como el subgrupo cíclico de orden $n$ en el que estamos trabajando está generado por $G$ no hace falta poner ``$\mod n$'' si multiplicamos por $G$.
 
 
-Ahora nos fijamos en la definición de $s = k^{-1}(z + r d_A) \mod n$. Multiplicamos por $k$ a ambos lados y dividimos por \textit{s} y obtenemos: $k = s^{-1} (z + r d_A) \mod n$.
+Ahora nos fijamos en la definición de $s \equiv k^{-1}(z + r d_A) \mod n$. Multiplicamos por $k$ a ambos lados y dividimos por \textit{s} y obtenemos: $k \equiv s^{-1} (z + r d_A) \mod n$.
 
 \begin{align}
 \begin{split}
@@ -504,6 +504,7 @@ Los algoritmos más rápidos para el cómputo de logaritmos discretos sobre una 
 \label{sec:demo}
 \subsection{SageMath}
 Se ha utilizado SageMath para representar curvas elípticas y para realizar una implementación propia del algoritmo ECDSA, puesto que esta herramienta software contiene funciones específicas para el tratamiento de curvas elípticas.\\
+
 El código se encuentra en la carpeta \texttt{src}. En el archivo \texttt{elliptic\_curves.ipynb} se recoge la implementación de los ejemplos mostrados en este archivo. En el archivo \texttt{Curvas elípticas.ipynb} está la implementación del algoritmo ECDSA y una situación hipotética de uso en la que Alice y Bob utilizan la firma de mensajes.
 
 \subsection{OpenSSL}
@@ -512,7 +513,7 @@ Si en la práctica quisieramos usar la criptografía de la curva elíptica, no u
 \subsubsection*{Generar las claves}
 Las claves pública y privada se guardarán en archivos con formato \texttt{.pem}, cifrado o no cifrado.
 
-OpenSSL contiene muchas curvas predefinidas que podemos usar, para verlas solo hay que ejecutar el comando mostrado en el código \ref{cod:list_curves}.
+OpenSSL contiene muchas curvas predefinidas que podemos usar, para verlas solo hay que ejecutar el comando mostrado en el Código \ref{cod:list_curves}.
 
 \begin{lstlisting}[language=bash, label={cod:list_curves}, caption={OpenSSL: listar curvas por defecto}, morekeywords={list_curves}]
  $ openssl ecparam -list_curves
@@ -544,7 +545,7 @@ OpenSSL contiene muchas curvas predefinidas que podemos usar, para verlas solo h
 
 Para generar un archivo con los parámetros de la curva ejecutamos el Código \ref{cod:param}, donde podemos cambiar \texttt{secp256k1} por la curva elegida.
 
-\begin{lstlisting}[language=bash, label={cod:EC}, caption={Generar los parámetros de la curva}, morekeywords={name, out}]
+\begin{lstlisting}[language=bash, label={cod:param}, caption={Generar los parámetros de la curva}, morekeywords={name, out}]
   $ openssl ecparam -name secp256k1 -out secp256k1.pem
   $ cat secp2561.pem
   -----BEGIN EC PARAMETERS-----
@@ -574,7 +575,7 @@ Para generar la pareja de clave privada tenemos dos opciones: generarla a travé
   -----END EC PRIVATE KEY-----
 \end{lstlisting}
 
-Una vez tenemos la clave privada para a partir de ella generar la clave pública requiere de ejecutar el comando mostrado en el Código \ref{cod:pub}
+Una vez tenemos la clave privada para a partir de ella generar la clave pública requiere de ejecutar el comando mostrado en el Código \ref{cod:pub}.
 
 \begin{lstlisting}[language=bash, label={cod:pub}, caption={Crear la clave pública a partir de la privada}, morekeywords={out, pubout}]
   $ openssl ec -in secp256k1-key.pem -pubout -out ecpubkey.pem
@@ -588,5 +589,5 @@ Una vez tenemos la clave privada para a partir de ella generar la clave pública
 
 \newpage
 \nocite{*}
-%\printbibliography
+\printbibliography
 \end{document}
